fixed text alignment of cornered banner container in  mobile version to be aligned to center

--- a/source/assets/stylesheets/components/_cornered-banner.scss
+++ b/source/assets/stylesheets/components/_cornered-banner.scss
@@ -69,6 +69,7 @@ Style for Cornered Banner Component
     width: 55%;
     font-size: 20px;
     margin: 0 50px;
+    text-align: center;
   }
   
 }
